# stepwise-regression

./: LICENSE  README.md  setup.cfg
examples/: Example_1.ipynb
stepreg/: stepreg.py
