[metadata]
name = stepwise-regression
version = 0.0.1
description = logistic stepwise regression
long_description = file: README.md
long_description_content_type = text/markdown
author = Mathias Kreis
author_email = mathias.kreis@t-online.de
url = https://github.com/Mathias-Kreis/stepwise-regression
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: Windows

[options]
packages = find:
python_requires = >=3.7
install_requires =
	numexpr>=2.7.0
	pandas>=1.0.1
	numpy>=1.18.1
	scipy>=1.3
	mock>=2.0
	matplotlib>=3.1.3
	scikit-learn>=0.22.1
	statsmodels>=0.11.0